@@ -1,5 +1,7 @@
 # Next
 
+- Adds little confirmation popup when adding items to the queue
+
 # 6.0.2
 
 - Adds background highlight to currently playing queue-item
